<resources>
    <string name="app_name">Rent-A-Tool</string>
    <string name="nav_accueil">Accueil</string>
    <string name="nav_publier">Publier</string>
    <string name="nav_profil">Profil</string>
    <string name="nav_paramètres">Paramètres</string>
    <string name="astuce_recherche">Rechercher</string>
    <string name="accueil_tout">Tout</string>
    <string name="historique_supprimer">Supprimer</string>
    <string name="accueil_filtrer">Filtrer</string>
    <string name="accueil_filtrer_outils">Filtrer les outils</string>
    <string name="accueil_filtrer_reset">Réinitialiser</string>
    <string name="categorie_autre">Autre</string>
    <string name="categorie_paysagement">Paysagement</string>
    <string name="categorie_beton">Béton</string>
    <string name="accueil_filtrer_trier_par">Trier par</string>
    <string name="accueil_filtrer_date">Date de publication</string>
    <string name="accueil_filtrer_prix">Prix</string>
    <string name="accueil_filtrer_trier_par_recent">Récent d\'abord</string>
    <string name="accueil_filtrer_trier_par_ancien">Ancien d\'abord</string>
    <string name="accueil_filtrer_trier_par_prix_bas">Prix bas d\'abord</string>
    <string name="accueil_filtrer_trier_par_prix_eleve">Prix élevé d\'abord</string>
    <string name="accueil_filtrer_date_moins_jour">Moins d\'un jour</string>
    <string name="accueil_filtrer_date_moins_semaine">Moins d\'une semaine</string>
    <string name="accueil_filtrer_date_moins_mois">Moins d\'un mois</string>
    <string name="accueil_filtrer_prix_moins_50">Moins de 50$</string>
    <string name="accueil_filtrer_prix_moins_100">Moins de 100$</string>
    <string name="accueil_filtrer_prix_moins_300">Moins de 300$</string>
    <string name="accueil_outil_date_peu">Il y a peu</string>
    <string name="accueil_outil_date_hier">Hier</string>
    <string name="accueil_outil_date_2">jours</string>
    <string name="accueil_outil_date_plus_semaine">Plus d\'une semaine</string>
    <string name="accueil_outil_date_moins_semaine">Moins d\'une semaine</string>
    <string name="accueil_outil_date_plus_mois">Moins d\'un mois</string>
    <string name="accueil_outil_prix">$ / Jour</string>
    <string name="accueil_outil_date_3">semaines</string>
    <string name="accueil_filtrer_categorie">Catégorie</string>
    <string name="accueil_recherche_resultats">Résultats</string>
    <string name="accueil_distance_pres">Très près</string>
    <string name="accueil_filtrer_distance">Distance (km)</string>
    <string name="outil_description_titre">Description</string>
    <string name="outil_détail_titre">Détail</string>
    <string name="outil_localisation_titre">Localisation</string>
    <string name="outil_réserver_fab">Réserver</string>
    <string name="outil_non_disponible_fab">Non Disponible</string>
    <string name="astruce_outil">Nom d\'outil</string>
    <string name="marqueOutil">Marque d\'outil</string>
    <string name="prix">Prix</string>
    <string name="nuemroTele">Votre numéro de téléphone</string>
    <string name="description">Description d\'outil</string>
    <string name="nouveau">Nouveau</string>
    <string name="neuve">Neuve</string>
    <string name="utiliser">Utiliser</string>
    <string name="addresse">Adresse domicile</string>
    <string name="ajouterPhoto">Ajouter photo</string>
    <string name="annuler">Annuler</string>
    <string name="publier_button">Publier</string>
    <string name="google_maps_key">AIzaSyB2n5y8A-j-2mB1FgbFPnniNzua7iSwhHw</string>
    <string name="outil_partager_fab">Partager</string>
    <string name="categorie">Catégorie</string>
    <string name="aucun_resultat">Aucuns outils trouvés</string>
</resources>