<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vue.FiltresVue"
    android:transitionName="shared_element_container">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbarFiltres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:navigationIcon="@drawable/close_24px"
            app:title="@string/accueil_filtrer_outils"
            app:menu="@menu/top_app_bar"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:gravity="bottom"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/filter_list_24px"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/accueil_filtrer_trier_par"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="16sp" />

            </LinearLayout>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroupTrier"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:chipSpacingVertical="0dp"
                android:layout_marginVertical="8dp"
                app:selectionRequired="true"
                app:singleSelection="true"
                app:checkedChip="@+id/chipTrierRecent">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipTrierRecent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:text="@string/accueil_filtrer_trier_par_recent"/>
                <com.google.android.material.chip.Chip
                    android:id="@+id/chipTrierAncien"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:text="@string/accueil_filtrer_trier_par_ancien"/>
                <com.google.android.material.chip.Chip
                    android:id="@+id/chipTrierPrixBas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:text="@string/accueil_filtrer_trier_par_prix_bas"/>
                <com.google.android.material.chip.Chip
                    android:id="@+id/chipTrierPrixEleve"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:text="@string/accueil_filtrer_trier_par_prix_eleve"/>

            </com.google.android.material.chip.ChipGroup>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="bottom"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/category_24px"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/accueil_filtrer_categorie"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="16sp" />

            </LinearLayout>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroupCategorie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:chipSpacingVertical="0dp"
                android:layout_marginVertical="8dp"
                app:selectionRequired="true"
                app:singleSelection="true"
                app:checkedChip="@+id/chipCategorieTout">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipCategorieTout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:text="@string/accueil_tout"/>


            </com.google.android.material.chip.ChipGroup>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="bottom"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/calendar_month_24px"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/accueil_filtrer_date"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="16sp" />

            </LinearLayout>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroupDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:chipSpacingVertical="0dp"
                android:layout_marginVertical="8dp"
                app:selectionRequired="true"
                app:singleSelection="true"
                app:checkedChip="@+id/chipDateTout">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipDateTout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:text="@string/accueil_tout"/>
                <com.google.android.material.chip.Chip
                    android:id="@+id/chipDateMoinsUn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:text="@string/accueil_filtrer_date_moins_jour"/>
                <com.google.android.material.chip.Chip
                    android:id="@+id/chipDateMoinsSemaine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:text="@string/accueil_filtrer_date_moins_semaine"/>
                <com.google.android.material.chip.Chip
                    android:id="@+id/chipDateMoinsMois"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:text="@string/accueil_filtrer_date_moins_mois"/>

            </com.google.android.material.chip.ChipGroup>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="bottom"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/sell_24px"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/accueil_filtrer_prix"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="16sp" />

            </LinearLayout>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroupPrix"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:chipSpacingVertical="0dp"
                android:layout_marginVertical="8dp"
                app:selectionRequired="true"
                app:singleSelection="true"
                app:checkedChip="@+id/chipPrixTout">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipPrixTout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:text="@string/accueil_tout"/>
                <com.google.android.material.chip.Chip
                    android:id="@+id/chipPrixMoins50"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:text="@string/accueil_filtrer_prix_moins_50"/>
                <com.google.android.material.chip.Chip
                    android:id="@+id/chipPrixMoins100"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:text="@string/accueil_filtrer_prix_moins_100"/>
                <com.google.android.material.chip.Chip
                    android:id="@+id/chipPrixMoins300"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:text="@string/accueil_filtrer_prix_moins_300"/>

            </com.google.android.material.chip.ChipGroup>

            <LinearLayout
                android:id="@+id/sectionDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="bottom"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/distance_24px"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/accueil_filtrer_distance"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textSize="16sp" />

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="12dp">

                    <TextView
                        android:id="@+id/labelSliderStart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"/>

                    <com.google.android.material.slider.Slider
                        android:id="@+id/sliderDistance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:valueFrom="0.0"
                        android:valueTo="500.0"
                        android:stepSize="5.0"
                        app:tickVisible="false"
                        android:layout_toEndOf="@+id/labelSliderStart"
                        android:layout_toStartOf="@+id/labelSliderEnd"
                        android:layout_centerVertical="true"
                        android:contentDescription="@string/accueil_filtrer_distance"/>

                    <TextView
                        android:id="@+id/labelSliderEnd"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="500"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"/>

                </RelativeLayout>

            </LinearLayout>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>