<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vue.AccueilVue"
    android:id="@+id/accueilCoordinator">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScroll="true">

        <com.google.android.material.search.SearchBar
            android:id="@+id/searchBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/astuce_recherche" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.search.SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/astuce_recherche"
        app:layout_anchor="@id/searchBar">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollRecherche"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/sectionResultats"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/textViewResultats"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/accueil_recherche_resultats"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="8dp"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerViewSearchResults"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/sectionHistorique"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerViewHistorique"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center_horizontal">

                        <Button
                            style="@style/Widget.Material3.Button.TonalButton"
                            android:id="@+id/btnSupprimerHistorique"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/historique_supprimer"
                            android:layout_margin="12dp"
                            app:icon="@drawable/delete_history_24px"
                            />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </com.google.android.material.search.SearchView>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefreshMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.core.widget.NestedScrollView
                android:id="@+id/nestedScrollMain"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="top|center_horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <include
                        android:id="@+id/aucunResultats"
                        layout="@layout/aucuns_resultats"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:visibility="gone"/>

                    <include
                        android:id="@+id/placeholderChargement"
                        layout="@layout/placeholder_outils_chargement"
                        android:visibility="gone"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerViewPosts"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone"/>

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fabFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/accueil_filtrer"
        android:text="@string/accueil_filtrer"
        app:icon="@drawable/filter_alt_24px"
        android:transitionName="shared_element_container"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>